--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "kbase-ui-lib",
+    "name": "@kbase/ui-lib",
     "version": "0.1.0-alpha.1",
     "description": "A typescript library to support kbase-ui and plugins",
     "main": "lib/index.js",
@@ -11,10 +11,8 @@
         "test": "jest",
         "copy-assets": "copyfiles -u 1  \"./src/**/*.css\" \"./lib/\"",
         "clean": "rm -rf ./lib/*",
-        "xbuild": "tsc",
         "build": "bash scripts/build.bash",
         "start": "tsc --watch",
-        "xpostinstall": "bash scripts/postinstall.bash",
         "generate-api-docs": "typedoc --out api-docs src"
     },
     "repository": {
@@ -29,7 +27,7 @@
         "typescript"
     ],
     "author": "KBase Developers",
-    "license": "SEE LICENSE IN LICENSE",
+    "license": "SEE LICENSE IN LICENSE.md",
     "bugs": {
         "url": "https://github.com/kbaseIncubator/kbase-ui-lib/issues"
     },
@@ -51,17 +49,17 @@
         "uuid": "^3.3.2"
     },
     "devDependencies": {
-        "@types/enzyme": "^3.9.3",
-        "@types/enzyme-adapter-react-16": "^1.0.5",
-        "@types/jest": "^24.0.13",
-        "copyfiles": "^2.1.0",
-        "enzyme": "^3.10.0",
-        "enzyme-adapter-react-16": "^1.14.0",
-        "eslint": "^5.16.0",
-        "eslint-plugin-react": "^7.13.0",
-        "jest": "^24.8.0",
-        "typescript": "3.4.5",
-        "ts-jest": "^24.0.2",
+        "@types/enzyme": "3.9.3",
+        "@types/enzyme-adapter-react-16": "1.0.5",
+        "@types/jest": "24.0.14",
+        "copyfiles": "2.1.0",
+        "enzyme": "3.10.0",
+        "enzyme-adapter-react-16": "1.14.0",
+        "eslint": "5.16.0",
+        "eslint-plugin-react": "7.13.0",
+        "jest": "24.8.0",
+        "typescript": "3.5.2",
+        "ts-jest": "24.0.2",
         "jest-transform-css": "2.0.0",
         "typedoc": "0.14.2"
     }
