--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
         "ts-jest": "24.0.2",
         "jest-transform-css": "2.0.0",
         "typedoc": "0.14.2"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
