--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kbase/ui-lib",
-    "version": "0.1.0-alpha.31",
+    "version": "0.1.0-alpha.38",
     "description": "A typescript library to support kbase-ui and plugins",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -13,6 +13,7 @@
         "clean": "rm -rf ./lib/*",
         "build": "bash scripts/build.bash",
         "prepare": "bash scripts/prepare.bash",
+        "prepublish": "jest",
         "start": "tsc --watch",
         "generate-api-docs": "typedoc --out api-docs src"
     },
