--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kbase/ui-lib",
-    "version": "0.2.0-alpha.2",
+    "version": "0.2.0-alpha.3",
     "description": "A typescript library to support kbase-ui and plugins",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -35,26 +35,25 @@
     },
     "homepage": "https://github.com/kbaseIncubator/kbase-ui-lib#readme",
     "dependencies": {
-        "@types/axios": "^0.14.0",
-        "@types/bluebird": "^3.5.27",
-        "@types/uuid": "^3.4.4",
+        "@types/bluebird": "*",
+        "@types/uuid": "*",
         "axios": "^0.19.0",
         "bluebird": "^3.5.5",
         "es-cookie": "^1.2.0",
-        "uuid": "^3.3.2"
+        "uuid": "^3.3.3"
     },
     "devDependencies": {
         "@types/enzyme": "3.10.3",
         "@types/enzyme-adapter-react-16": "1.0.5",
-        "@types/jest": "24.0.18",
+        "@types/jest": "*",
         "copyfiles": "2.1.1",
-        "eslint": "6.2.1",
+        "eslint": "6.3.0",
         "eslint-plugin-react": "7.14.3",
         "jest": "24.9.0",
         "jest-transform-css": "2.0.0",
         "ts-jest": "24.0.2",
         "typedoc": "0.15.0",
-        "typescript": "3.5.3"
+        "typescript": "3.6.2"
     },
     "publishConfig": {
         "access": "public"
