--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,18 @@
         "removeComments": true,
         "declaration": true,
         "sourceMap": true,
-        "jsx": "react",
-        "typeRoots": ["index.d.ts", "node_modules/@types"],
+        "typeRoots": [
+            "index.d.ts",
+            "node_modules/@types"
+        ],
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true
     },
-    "include": ["./src/**/*.tsx", "./src/**/*.ts"],
-    "exclude": ["node_modules", "*.test.*"]
+    "include": [
+        "./src/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        "*.test.*"
+    ]
 }
