--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kbase/ui-lib",
-    "version": "0.2.0-alpha.3",
+    "version": "0.3.0",
     "description": "A typescript library to support kbase-ui and plugins",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -8,7 +8,7 @@
         "/lib/**/*"
     ],
     "scripts": {
-        "test": "jest",
+        "test": "jest src",
         "copy-assets": "copyfiles -u 1  \"./src/**/*.css\" \"./lib/\"",
         "clean": "rm -rf ./lib/*",
         "build": "bash scripts/build.bash",
@@ -35,25 +35,25 @@
     },
     "homepage": "https://github.com/kbaseIncubator/kbase-ui-lib#readme",
     "dependencies": {
-        "@types/bluebird": "*",
-        "@types/uuid": "*",
-        "axios": "^0.19.0",
-        "bluebird": "^3.5.5",
-        "es-cookie": "^1.2.0",
-        "uuid": "^3.3.3"
+        "@types/bluebird": "3",
+        "@types/uuid": "8",
+        "bluebird": "^3.0.0",
+        "es-cookie": "^1.0.0",
+        "uuid": "^8.0.0"
     },
     "devDependencies": {
-        "@types/enzyme": "3.10.3",
-        "@types/enzyme-adapter-react-16": "1.0.5",
-        "@types/jest": "*",
-        "copyfiles": "2.1.1",
-        "eslint": "6.3.0",
-        "eslint-plugin-react": "7.14.3",
-        "jest": "24.9.0",
-        "jest-transform-css": "2.0.0",
-        "ts-jest": "24.0.2",
-        "typedoc": "0.15.0",
-        "typescript": "3.6.2"
+        "@testing-library/dom": "7.30.1",
+        "@testing-library/jest-dom": "5.11.10",
+        "@testing-library/user-event": "13.0.16",
+        "@types/jest": "26",
+        "copyfiles": "2.4.1",
+        "eslint": "7.23.0",
+        "eslint-plugin-react": "7.23.1",
+        "jest": "26.6.3",
+        "jest-transform-css": "2.1.0",
+        "ts-jest": "26.5.4",
+        "typedoc": "0.20.34",
+        "typescript": "4.2.3"
     },
     "publishConfig": {
         "access": "public"
