--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kbase/ui-lib",
-    "version": "0.4.2",
+    "version": "0.4.3",
     "description": "A typescript library to support kbase-ui and plugins",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -8,7 +8,8 @@
         "lib": "lib"
     },
     "files": [
-        "/lib/**/*"
+        "/lib/**/*",
+        "!/lib/**/*.test.*"
     ],
     "scripts": {
         "test": "jest src",
