--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kbase/ui-lib",
-    "version": "0.4.9",
+    "version": "0.5.0",
     "description": "A typescript library to support kbase-ui and plugins",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -42,20 +42,21 @@
         "@types/uuid": "8",
         "bluebird": "^3.0.0",
         "es-cookie": "^1.0.0",
-        "uuid": "^8.0.0"
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "@testing-library/dom": "7.30.1",
-        "@testing-library/jest-dom": "5.11.10",
-        "@testing-library/user-event": "13.0.16",
-        "@types/jest": "26",
+        "@testing-library/dom": "8.19.0",
+        "@testing-library/jest-dom": "5.16.5",
+        "@testing-library/user-event": "14.4.3",
+        "@types/jest": "29.2.3",
         "copyfiles": "2.4.1",
-        "eslint": "7.23.0",
-        "jest": "26.6.3",
-        "jest-transform-css": "2.1.0",
-        "ts-jest": "26.5.4",
-        "typedoc": "0.20.34",
-        "typescript": "4.2.3"
+        "eslint": "8.28.0",
+        "jest": "29.3.1",
+        "jest-environment-jsdom": "29.3.1",
+        "jest-transform-css": "6.0.0",
+        "ts-jest": "29.0.3",
+        "typedoc": "0.23.21",
+        "typescript": "4.9.3"
     },
     "publishConfig": {
         "access": "public"
