--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kbase/ui-lib",
-    "version": "0.5.1",
+    "version": "0.5.2",
     "description": "A typescript library to support kbase-ui and plugins",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -39,9 +39,10 @@
     "homepage": "https://github.com/kbaseIncubator/kbase-ui-lib#readme",
     "dependencies": {
         "@types/bluebird": "3",
+        "@types/js-cookie": "3",
         "@types/uuid": "9",
         "bluebird": "^3.0.0",
-        "es-cookie": "^1.0.0",
+        "js-cookie": "^3.0.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
