--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kbase/ui-lib",
-    "version": "0.5.2",
+    "version": "0.5.3",
     "description": "A typescript library to support kbase-ui and plugins",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -9,14 +9,15 @@
     },
     "files": [
         "/lib/**/*",
+        "/src/**/*",
         "!/lib/**/*.test.*"
     ],
     "scripts": {
         "test": "jest src",
         "copy-assets": "copyfiles -u 1  \"./src/**/*.css\" \"./lib/\"",
         "clean": "rm -rf ./lib/*",
-        "build": "bash scripts/build.bash",
-        "prepack": "bash scripts/build.bash",
+        "build": "tsc",
+        "prepack": "tsc",
         "prepublishOnly": "jest src",
         "start": "tsc --watch",
         "generate-api-docs": "typedoc --out api-docs src"
